[JAVA-18151] Added jvm arguments for use of proprietary sdk apis